[package]
name = "passfs"
version = "0.1.0"
authors = ["Matthew Booth <mbooth@redhat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.0"
fuser = "0.7.0"
openat = "0.1.21"
log = "0.4.14"
simple_logger = "1.11.0"
libc = "0.2.94"
time = "0.1"